@@ -1,5 +1,8 @@
 2003-07-02  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>
 
+	* logo-competition/logos/Wolf_Bergenheim/index.php: 
+	added logo with white background
+
 	* logo-competition/logos/*/index.php:
 	added some email addresses of logo submitters
 
